ruta get times y get times/{id}
